# taskfile-to-tasks

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.zed/: debug.json
src/: TaskfileToTasks.py
taskfile_to_tasks/: __init__.py  cli.py  converter.py
